Import of MISHIKAL/Net-LDAPapi-3.0.0 from CPAN.
gitpan-cpan-distribution: Net-LDAPapi
gitpan-cpan-version:      3.0.0
gitpan-cpan-path:         MISHIKAL/Net-LDAPapi-3.0.0.tar.gz
gitpan-cpan-author:       MISHIKAL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,9 +1,9 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Net-LDAPapi
-version:      2.01
+version:      3.0.0
 version_from: LDAPapi.pm
-installdirs:  vendor
+installdirs:  site
 requires:
 
 distribution_type: module
